[gd_scene load_steps=19 format=3 uid="uid://svag2bbhgyid"]

[ext_resource type="Script" path="res://Logic/Combat/Combat.gd" id="1_65o0h"]
[ext_resource type="Script" path="res://Logic/Combat/Phases/StartPhase.gd" id="2_jgbr1"]
[ext_resource type="Script" path="res://Logic/Combat/Phases/SpellPhase.gd" id="4_xof1w"]
[ext_resource type="Script" path="res://Logic/Combat/Phases/EnemyPhase.gd" id="6_52d1n"]
[ext_resource type="Script" path="res://Logic/Combat/Phases/EndPhase.gd" id="7_4vv4x"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/AnimationUtility.gd" id="8_7ilnj"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/CardUtility.gd" id="9_tmams"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/EnergyUtility.gd" id="10_4ygde"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/MovementUtility.gd" id="11_0wukx"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/LogUtility.gd" id="12_4hu3i"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/InputUtility.gd" id="13_djmeo"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/EventUtility.gd" id="14_q5i8d"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/TimedEffectsUtility.gd" id="15_t7ygn"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/ActionStackUtility.gd" id="16_1yub7"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/AttackUtility.gd" id="16_067l4"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/CastableUtility.gd" id="17_x76i2"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/ViewUtility.gd" id="17_xyw06"]
[ext_resource type="Script" path="res://Logic/Combat/Utilities/IdUtility.gd" id="18_xt7lj"]

[node name="Combat" type="Node"]
script = ExtResource("1_65o0h")

[node name="Phases" type="Node" parent="."]

[node name="StartPhase" type="Node" parent="Phases"]
unique_name_in_owner = true
script = ExtResource("2_jgbr1")

[node name="SpellPhase" type="Node" parent="Phases"]
unique_name_in_owner = true
script = ExtResource("4_xof1w")

[node name="EnemyPhase" type="Node" parent="Phases"]
unique_name_in_owner = true
script = ExtResource("6_52d1n")

[node name="EndPhase" type="Node" parent="Phases"]
unique_name_in_owner = true
script = ExtResource("7_4vv4x")

[node name="Utility" type="Node" parent="."]

[node name="AnimationUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("8_7ilnj")

[node name="CardUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("9_tmams")

[node name="EnergyUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("10_4ygde")

[node name="MovementUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("11_0wukx")

[node name="LogUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("12_4hu3i")

[node name="InputUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("13_djmeo")

[node name="EventUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("14_q5i8d")

[node name="TimedEffectsUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("15_t7ygn")

[node name="AttackUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("16_067l4")

[node name="ViewUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("17_xyw06")

[node name="ActionStackUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("16_1yub7")

[node name="CastableUtility" type="Node" parent="Utility"]
unique_name_in_owner = true
script = ExtResource("17_x76i2")

[node name="IdUtility" type="Node" parent="Utility"]
script = ExtResource("18_xt7lj")
